# HackAPI

./: README.md  docker-compose.yml  pyproject.toml
src/: .env  main.py  set_dtandart_database.py  upd_basee.bash
src/alembic/: env.py
src/alembic/versions/: 2025_05_08_1439-61d0e65d74ab_init.py
src/api/: __init__.py  author.py  book.py  book_tag.py  order.py  role.py  tag.py  validation.py
src/api/hackathon/: __init__.py  add_admin.py  add_jury.py  create.py  get.py  get_all.py  remove_admin.py  remove_jury.py  remove_team.py
src/api/image/: __init__.py  get.py  upload.py
src/api/team/: __init__.py  accept_want_users.py  add_to_want_the_user.py  check_want_users.py  create.py  get_all_searchers.py  invite.py  set_is_activ.py  uninvite.py
src/api/user/: __init__.py  add_to_want_the_team.py  check_want_teams.py  create.py  get.py  get_all_searches.py  login.py  resp_pers.py  root.py  set_is_search_team.py  (+2 more)
src/auth/: jwt.py  utils.py
src/certs/: jwt-private.pem  jwt-public.pem
src/certs.example/: jwt-public.pem
src/core/: config.py
src/crud/: __init__.py  any_user.py  author.py  book.py  book_tag.py  create.py  get.py  get_all.py  get_user_by_email.py  login.py  order.py  role.py  tag.py
src/database/: __init__.py  base.py  db_helper.py
src/exceptions/: any.py
src/my_scripts/: check_lines_of_code.py  check_tables.py  clear_db.py  set_standart_db.py  test.py
src/schemas/: any_user.py  author.py  book.py  book_tag.py  hackathon.py  invite_url.py  order.py  role.py  tag.py  team.py  token.py  user.py
src/utils/: case_converter.py  model.py
(+32 files in other folders)
