[project]
name = "library-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.15.1",
    "asyncpg>=0.30.0",
    "bcrypt>=4.3.0",
    "fastapi[all]>=0.115.11",
    "pyjwt[crypto]>=2.10.1",
    "sqlalchemy[asyncio]>=2.0.39",
]
